force-app/main/default/objects/DDP_Settings__c/DDP_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DDP Settings</label>
</CustomObject>