force-app/main/default/objects/DDP_Settings__c/fields/DDP_1_Id__c.field-meta.xml
<CustomField>
    <fullName>DDP_1_Id__c</fullName>
    <label>DDP 1 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>