force-app/main/default/objects/DDP_Settings__c/fields/DDP_Id_MSO_Manual__c.field-meta.xml
<CustomField>
    <fullName>DDP_Id_MSO_Manual__c</fullName>
    <label>DDP Id (Basic MSO Manual button)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>