force-app/main/default/objects/DDP_Settings__c/fields/DDP_Id_Neg_Conn_Offer__c.field-meta.xml
<CustomField>
    <fullName>DDP_Id_Neg_Conn_Offer__c</fullName>
    <label>DDP Id (Manual Neg Conn Offer button)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>