force-app/main/default/objects/DDP_Settings__c/fields/Deploy_1_Id__c.field-meta.xml
<CustomField>
    <fullName>Deploy_1_Id__c</fullName>
    <label>Deploy 1 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>