force-app/main/default/objects/DDP_Settings__c/fields/Deploy_4_Id_AusNet_Meter__c.field-meta.xml
<CustomField>
    <fullName>Deploy_4_Id_AusNet_Meter__c</fullName>
    <label>Deploy 4 Id (AusNet owned meter)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>