force-app/main/default/objects/DDP_Settings__c/fields/Deploy_5_Id_Not_AusNet_Meter__c.field-meta.xml
<CustomField>
    <fullName>Deploy_5_Id_Not_AusNet_Meter__c</fullName>
    <label>Deploy 5 Id (Not AusNet owned meter)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>