force-app/main/default/objects/DDP_Settings__c/fields/Deploy_Id_FE_Neg_Conn_Offer__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Id_FE_Neg_Conn_Offer__c</fullName>
    <label>Deploy Id (FE Neg Conn Offer)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>